external/lib25519-20241004/build/arm64/multiscalar/ed25519/arm64-maa4-redmul-p3/shared/result-compile-ge25519_multi_scalarmult_precompute
ge25519_multi_scalarmult_precompute.S:2473:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
